# vlc-jp-kr-translate

./: .gitignore  AGENTS.md  CLAUDE.md  install.sh
backend/: .env.example  pyproject.toml
backend/src/vlc_translate/: __main__.py  cli.py  config.py  main.py  models.py
backend/src/vlc_translate/routes/: audio.py  subtitle.py
backend/src/vlc_translate/services/: srt_writer.py  subtitle_parser.py  transcriber.py  translator.py
backend/tests/: test_cli.py  test_srt_writer.py  test_subtitle_parser.py  test_translator.py
codev/plans/: 1-vlc-jp-kr-subtitle-translator.md
codev/specs/: 1-vlc-jp-kr-subtitle-translator.md
native/: CMakeLists.txt
native/benchmark/: bench_main.cpp
native/src/: audio_decoder.cpp  audio_decoder.hpp  main.cpp  pipeline.cpp  pipeline.hpp  srt_writer.cpp  srt_writer.hpp  transcriber.cpp  transcriber.hpp  types.hpp
scripts/: start.sh
vlc-extension/: vlc_jp_kr_translate.lua
